# Larityd

./: Cargo.toml  README.md  Technical_Specifications.md
crates/consensus/: Cargo.toml
crates/consensus/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs
crates/node/: Cargo.toml
crates/node/src/: main.rs
crates/prover/: Cargo.toml
crates/prover/src/: lib.rs
crates/snarks/: Cargo.toml
crates/snarks/src/: lib.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
