[package]
name = "chronos-node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
chronos-consensus = { path = "../consensus" }
chronos-network = { path = "../network" }
chronos-model = { path = "../model" }
chronos-state = { path = "../state" }
chronos-prover = { path = "../prover" }
tracing = "0.1"
tracing-subscriber = "0.3"
